# matrix_library_c

./: CMakeLists.txt
include/: matrix.h
src/: matrix.c
src/libs/libcmatrix/: matrix.c  matrix.h
src/libs/matrix/: matrix.c  matrix.h
